master/yaml/elasticsearch.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:8.13.0
        ports:
        - containerPort: 9200
        - containerPort: 9300
---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - name: http
    protocol: TCP
    port: 9200
    targetPort: 9200
    nodePort: 30003
  - name: transport
    protocol: TCP
    port: 9300
    targetPort: 9300
    nodePort: 30004
  type: NodePort
