master/yaml/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.13.2
        ports:
        - containerPort: 5601
#        resources:
#          requests:
#            memory: "256Mi"   # Request 256MB of memory
#            cpu: "100m"       # Request 100 milliCPU (0.1 CPU cores)
#          limits:
#            memory: "256Mi"   # Limit memory usage to 256MB
#            cpu: "100m"       # Limit CPU usage to 100 milliCPU (0.1 CPU cores)



---

apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  ports:
  - protocol: TCP
    port: 5601
    targetPort: 5601
    nodePort: 30005
  type: NodePort
