master/yaml/mycas_mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mycas-mysql-service
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: mycas_mysql
