master/yaml/mycas_pushgateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-pushgateway
  template:
    metadata:
      labels:
        app: prometheus-pushgateway
    spec:
      containers:
      - name: prometheus-pushgateway
        image: prom/pushgateway
        ports:
        - containerPort: 9091  

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-pushgateway
spec:
  selector:
    app: prometheus-pushgateway
  ports:
    - protocol: TCP
      port: 9091  
      targetPort: 9091
