master/yaml/mycas_webapp_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mycas-webapp-service
spec:
  selector:
    app: mycas-webapp  
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8080  
      nodePort: 30000
