master/yaml/pushgateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-pushgateway-nodeport
spec:
  selector:
    app: prometheus-pushgateway
  type: NodePort
  ports:
    - protocol: TCP
      port: 9091   # Port exposed by the Pushgateway container
      targetPort: 9091
      nodePort: 30001  # Expose the service on port 30001 on each node
