master/yaml/stb-port9999.yml
apiVersion: v1
kind: Service
metadata:
  name: stb-port9999
spec:
  ports:
    - name: stb9999
      port: 9999
      targetPort: 9999
  selector:
    app: mycas-stb
