master/yaml/stb-service-tmp.yml
apiVersion: v1
kind: Service
metadata:
  name: stb-service-tmp
spec:
  ports:
    - name: stb
      port: 8888
      targetPort: 8888
  selector:
    app: mycas-stb
