master/yaml/ingress-kafka.yml


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-kafka
spec:
  podSelector:
    matchLabels:
      app: my-python-pod
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mycas-kafka
